<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question1" />

                <TextView
                    style="@style/questions"
                    android:text="@string/question_1" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/radio_group_question_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    style="@style/radioButton"
                    android:text="@string/option1A" />

                <RadioButton
                    android:id="@+id/answer_1"
                    style="@style/radioButton"
                    android:text="@string/option1B" />

                <RadioButton
                    style="@style/radioButton"
                    android:text="@string/option1C" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question2" />

                <TextView
                    style="@style/questions"
                    android:text="@string/question_2" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/answer_2_a"
                style="@style/checkBox"
                android:text="@string/option2A" />

            <CheckBox
                android:id="@+id/answer_2_b"
                style="@style/checkBox"
                android:text="@string/option2B" />

            <CheckBox
                android:id="@+id/answer_2_c"
                style="@style/checkBox"
                android:text="@string/option2C" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question3" />

                <TextView
                    style="@style/questions"
                    android:text="@string/question_3" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/radio_group_question_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    style="@style/radioButton"
                    android:text="@string/option3A" />

                <RadioButton
                    style="@style/radioButton"
                    android:text="@string/option3B" />

                <RadioButton
                    android:id="@+id/answer_3"
                    style="@style/radioButton"
                    android:text="@string/option3C" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question4" />

                <TextView
                    style="@style/questions"
                    android:text="@string/question_4" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/answer_4_a"
                style="@style/checkBox"
                android:text="@string/option4A" />

            <CheckBox
                android:id="@+id/answer_4_b"
                style="@style/checkBox"
                android:text="@string/option4B" />

            <CheckBox
                android:id="@+id/answer_4_c"
                style="@style/checkBox"
                android:text="@string/option4C" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question5" />

                <TextView
                    style="@style/questions"
                    android:text="@string/question_5" />
            </LinearLayout>

            <EditText
                android:id="@+id/answer_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:hint="@string/textHint"
                android:inputType="numberSigned" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Question6" />

                <TextView
                    style="@style/questions"
                    android:text="@string/question_6" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/answer_6_a"
                style="@style/checkBox"
                android:text="@string/option6A" />

            <CheckBox
                android:id="@+id/answer_6_b"
                style="@style/checkBox"
                android:text="@string/option6B" />

            <CheckBox
                android:id="@+id/answer_6_c"
                style="@style/checkBox"
                android:text="@string/option6C" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:onClick="onSubmit"
                android:text="@string/Submit" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>